[gd_scene load_steps=3 format=3 uid="uid://bhugafu22k36w"]

[ext_resource type="Script" path="res://Dragable_Text.gd" id="1_q3j4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3q3o"]
size = Vector2(260, 217)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_q3j4t")

[node name="Visual" type="ColorRect" parent="."]
offset_left = -127.0
offset_top = -105.0
offset_right = 124.0
offset_bottom = 102.0
color = Color(0.823529, 0.705882, 0.54902, 1)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_m3q3o")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
